refractor: add better logging